added script to manage the cassette data

--- a/Baker_G300Final/Assembly-CSharp.csproj
+++ b/Baker_G300Final/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\CassetteController.cs" />
+    <Compile Include="Assets\Scripts\CassetteData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
