--- a/Baker_G300Final/Assembly-CSharp.csproj
+++ b/Baker_G300Final/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\CassetteController.cs" />
     <Compile Include="Assets\Scripts\LevelChanger.cs" />
+    <Compile Include="Assets\Scripts\OpenToGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
